# qpb_data_analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  setup.sh
bash_scripts/: analyze_all_invert_processed_data_files_sets.sh  analyze_log_files.sh  calculate_critical_bare_mass.sh  find_empty_files.sh  generate_data_files_markdown_note.sh  inspect_all_raw_data_files_sets_naming.sh  process_all_qpb_data_files.sh  process_all_qpb_log_files.sh  process_all_raw_data_files_sets.sh  validate_all_raw_data_files_sets.sh
bash_scripts/batch/: run_complete_pipeline_batch.json  run_complete_pipeline_batch.sh  run_validation_batch.json  run_validation_batch.sh
bash_scripts/checks/: check_invert_output_files.sh  check_qpb_log_files.sh  check_raw_data_files_set.sh  detect_changes.sh  find_empty_files.sh  inspect_raw_data_files_set_naming.sh  validate_raw_data_files_set.sh
bash_scripts/single_set/: run_complete_pipeline.sh  run_validation.sh
bash_scripts/unit_tests/: test_validate_raw_data_files_set.sh
bash_scripts/utils/: back_up_all_raw_data_files.sh  back_up_data_files.sh  change_data_files_set_name.sh  move_all_raw_data_files.sh
bash_scripts/workflows/: analyze_invert_processed_data_files_set.sh  process_raw_data_files_set.sh  run_parsing_pipeline.sh  run_processing_pipeline.sh
core/integration_tests/: test_inspect_csv_file.ipynb
core/unit_tests/: test_data_processing.py  test_extraction.py  test_plotting.py
data_files/processed/: README.md
data_files/raw/: README.md
docs/: data_concepts_documentation.md  data_files_sets_metadata_template.md  logging_utilities_example.py  metadata_for_raw_data.md  organizing_data_files.md  project_plan.txt  project_structure.md
docs/Flowcharts/: validate_qpb_data_files.md
docs/UML_class_diagrams/: analyzer.md
docs/api/: dataframeanalyzer.md  hdf5plotter.md  load_csv_docs.md  tablegenerator.md
docs/flowcharts/: analyzer.md  hdf5_analyzer.md  main_flow.md  (+3 more)
src/: PCAC_mass_correlator_values_calculation.py  log_files_analysis.py  parse_correlator_files.py  process_qpb_log_files.py
unit_tests/: test_data_processing.py  test_extraction.py
(+196 files in other folders)
